WIP structure setup and svg css entities working correctly

--- a/examples/example-subway.html
+++ b/examples/example-subway.html
@@ -14,61 +14,62 @@
 
     <main style="max-width:1140px; margin: 0 auto; padding: 1.6em;">
       
-      <div class="bb-subway">
-        <ul>
+
+        <ul class="bb-subway" style="font-size: 1.33em;">
             <li>
-                One
+                <a href="#">One</a>
             </li>
             <li>
-                Two
+                <a href="#">Two</a>
             </li>
             <li>
-                Three
+                <a href="#">Three</a>
                 <ul>
                     <li>
-                        Child of three first
+                        <a href="#">Child of three first, this one has a long title because our clients typically like to write a paragraph for the page title. I don't know why, every style guide and UX study recommends against it, but there you go.</a>
                     </li>
                     <li>
-                        Child of three second
+                        <a href="#">Child of three second</a>
                         <ul>
                             <li>
-                                Grandchild of three first
+                                <a href="#">Grandchild of three first</a>
                             </li>
                             <li>
-                                Grandchild of three second
+                                <a href="#">Grandchild of three second</a>
                             </li>
                             <li>
-                                Grandchild of three third
+                                <a href="#">Grandchild of three third</a>
                             </li>
                         </ul>
                     </li>
                     <li>
-                        Child of three third
+                        <a href="#">Child of three third</a>
                     </li>
                 </ul>
             </li>
             <li>
-                Four
+                <a href="#">Four</a>
             </li>
             <li>
-                Five
+                <a href="#">Five</a>
                 <ul>
                     <li>
-                        Child of five first
+                        <a href="#">Child of five first</a>
                     </li>
                     <li>
-                        Child of five second
+                        <a href="#">Child of five second</a>
                     </li>
                     <li>
-                        Child of five Third
+                        <a href="#">Child of five Third</a>
                     </li>
                 </ul>
             </li>
             <li>
-                Six
+                <a href="#">Six</a>
             </li>
         </ul>
-    </div>
+        
+
 
     </main>
   </body>
