WIP working, with alignment issues

--- a/examples/example-subway.html
+++ b/examples/example-subway.html
@@ -15,12 +15,15 @@
     <main style="max-width:1140px; margin: 0 auto; padding: 1.6em;">
       
 
-        <ul class="bb-subway" style="font-size: 1.33em;">
+        <ul class="bb-subway small">
             <li>
                 <a href="#">One</a>
             </li>
             <li>
                 <a href="#">Two</a>
+                <ul>
+                    <li><a href="#">What if there is only one child?</a></li>
+                </ul>
             </li>
             <li>
                 <a href="#">Three</a>
