--- a/examples/example-subway.html
+++ b/examples/example-subway.html
@@ -32,6 +32,31 @@
                         <a href="#">Child of three first, this one has a long title because our clients typically like to write a paragraph for the page title. I don't know why, every style guide and UX study recommends against it, but there you go.</a>
                     </li>
                     <li>
+                        <a href="#">child of long</a>
+                        <ul>
+                            <li>
+                                <a href="#">another long child, this one has a long title because our clients typically like to write a paragraph for the page title. I don't know why, every style guide and UX study recommends against it, but there you go.</a>
+                            </li>
+                            <li>
+                                <a href="#">Child of long 2</a>
+                                <ul>
+                                    <li>
+                                        <a href="#">child of long 2</a>
+                                    </li>
+                                    <li>
+                                        <a href="#"> second child of long 2</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">What happens if the last child is a really long bit of text. That would mean no good way of controlling where the connecting lines start and end. Well, you could use JS, but I don't want to.</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#">Child of three third</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
                         <a href="#">Child of three second</a>
                         <ul>
                             <li>
@@ -72,6 +97,11 @@
             </li>
         </ul>
         
+        <h2>Only child</h2>
+        <ul class="bb-subway">
+            <li><a href="#">There is only one child</a></li>
+        </ul>
+
 
 
     </main>
