add class that applies bs icon font

--- a/examples/icons.html
+++ b/examples/icons.html
@@ -45,6 +45,7 @@
           <hr>
           <p><span class="icon-bi-funnel-fill icon-bi-funnel-fill-after">icon before and after</span></p>
           <p><a class="icon-bi-funnel-fill icon-bi-funnel-fill-after focus-underline" href="#">icon before and after with underline</a></p>
+          <p><span class="icon-bi"> &#xF52A</span></p>
         </section>
       </article>
   </body>
